--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "dependencies": {
     "babel-preset-react": "^6.5.0",
     "babelify": "^7.2.0",
+    "codemirror": "^5.14.2",
     "elixir-jshint": "^1.1.2",
     "jquery": "^2.2.2",
     "laravel-elixir": "^4.0.0",
     "marked": "^0.3.5",
     "react": "^0.14.7",
+    "react-codemirror": "^0.2.6",
     "react-dom": "^0.14.7"
   }
 }
